[build-system]
requires = ["setuptools>=82.0.1", "Cython>=3.2.4"]
build-backend = "setuptools.build_meta"

[project]
name = "emojilib"
description = "Ultimate Emoji Generator library using Skia and Python C Extension"
version = "1.1.0rc1"
dependencies = [
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Emoji Generator", email = "ultimate.emoji.gen@gmail.com"},
]

[project.urls]
source = "https://github.com/emoji-gen/emojilib"

[dependency-groups]
dev = [
    "Cython>=3.2.4",
    "auditwheel>=6.6.0",
    "build>=1.5.0",
    "pytest>=9.0.3",
    "wheel>=0.47.0",
]
